<resources>
    <string name="app_name">Kaal</string>
    <string name="title_regions">Regions</string>
    <string name="title_explore">Explore</string>
    <string name="title_lodge">Hotels</string>
    <string name="title_favorites">Favorite</string>
    <string name="title_schedule">Schedule</string>
    <string name="travel_destination">image of a travel destination</string>
    <string name="trip_thumbnail_image">event cover image</string>
    <string name="local_store_image">local store image</string>
    <string name="detail_image">detail image</string>
    <string name="chat_bubble">chat bubble</string>
    <string name="share_info">share info</string>
    <string name="rates_per_session">rates per session</string>
    <string name="details_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="emoji">&#128522; Northern Region</string>
    <string name="elephant">🐘 Northern Region</string>
    <string name="lorem_ipsum">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old</string>
    <string name="title_button">Get started</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="google_signin">Continue with google</string>
    <string name="twitter_sign_up">continue with twitter</string>
    <string name="sign_in">Sign In</string>
    <string name="name">Name</string>
    <string name="first_name">First Name</string>
    <string name="log_in">Log In</string>
    <string name="invalid_email">Email is not valid</string>
    <string name="invalid_password">Password must be greater than 5 letters</string>
    <string name="prompt_empty_field">Field cannot be empty</string>
    <string name="detail_description">Suscipit inceptos est felis purus aenean aliquet adipiscing diam venenatis, augue nibh duis neque aliquam tellus condimentum sagittis vivamus, cras ante etiam sit conubia elit tempus accumsan libero, mattis per erat habitasse cubilia ligula penatibus curae. Sagittis lorem augue arcu blandit libero molestie non ullamcorper, finibus imperdiet iaculis ad quam per luctus neque, ligula curae mauris parturient diam auctor eleifend laoreet ridiculus, hendrerit adipiscing sociosqu pretium nec velit aliquam. Inceptos egestas maecenas imperdiet eget id donec nisl curae congue, massa tortor vivamus ridiculus integer porta ultrices venenatis aliquet, curabitur et posuere blandit magnis dictum auctor lacinia, eleifend dolor in ornare vulputate ipsum morbi felis. Faucibus cursus malesuada orci ultrices diam nisl taciti torquent, tempor eros suspendisse euismod</string>


</resources>
