<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_regions">

    <fragment
        android:id="@+id/navigation_regions"
        android:name="com.diayan.kaal.ui.home.RegionsFragment"
        android:label="@string/title_regions"
        tools:layout="@layout/fragment_regions" />

    <fragment
        android:id="@+id/navigation_schedule"
        android:name="com.diayan.kaal.ui.schedules.SchedulesFragment"
        android:label="@string/title_schedule"
        tools:layout="@layout/fragment_schedules" />

    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.diayan.kaal.ui.stores.StoresFragment"
        android:label="@string/title_lodge"
        tools:layout="@layout/fragment_stores" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.diayan.kaal.ui.favorites.FavoriteFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" />
</navigation>